# rslite

./: .gitignore  .protected_files.txt  CREATE_C2RUST_SHELL.sh  CRUST_SHELL_QUICK_START.md  Cargo.toml  Dockerfile  Dockerfile.agent  KNOWN_ISSUES.md  Makefile  README.md  build.rs  build_all.sh  build_all_updated.sh  c2rust-shell.toml  lib.rs  protected_files.txt  rust-toolchain.toml  shell_build.sh  spec-checks.k.json  spec-checks.k.md  spec.k.json  spec.k.md  sqlite3  task-spec.k.json  task-spec.k.md  testfixture_build.sh  testfixture_swap_optimized.sh  transpile_shell.sh
c2rust/: Cargo.toml  FFI_PRINTF_INTERFACE.md
c2rust/c2rust-scripts/: CREATE_C2RUST_SHELL.sh  CREATE_C2RUST_TCLSQLITE.sh  check_static_linkage.sh  defines_shell.txt  defines_testfixture.txt
c2rust/crust-speedtest1/: Cargo.toml
c2rust/crust-speedtest1/src/: main.rs
c2rust/crust-sqlite-shell/: Cargo.toml  README.md  build.rs  build.sh  rust-toolchain.toml
c2rust/crust-sqlite-shell/src/: main.rs  shell.rs
c2rust/crust-sqlite-shell/target-testfixture/: .rustc_info.json
c2rust/crust-tclsqlite/: Cargo.toml  c2rust-tclsqlite.toml
c2rust/crust-tclsqlite/src/: main.rs
c2rust/crust-tclsqlite/src/src/src/: test1.rs  test2.rs  test4.rs  test5.rs  test8.rs  test9.rs  test_autoext.rs  test_blob.rs  test_devsym.rs  test_fs.rs  test_hexio.rs  test_journal.rs  test_malloc.rs  test_md5.rs  test_multiplex.rs  test_mutex.rs  test_osinst.rs  test_pcache.rs  test_rtree.rs  test_schema.rs  test_syscall.rs  test_tclvar.rs  test_vfs.rs
crates/rslite-core/: Cargo.toml  expected_exports.txt  lib.rs
crates/rslite-core/src/: fts5.rs  mutex_pl.rs  opcodes.rs  parse.rs  printf_c_variadic.rs  safe_format.rs
crates/rslite-core/src/ext/fts3/: fts3.rs  fts3_aux.rs  fts3_expr.rs  fts3_hash.rs  fts3_porter.rs  fts3_snippet.rs  fts3_tokenize_vtab.rs  fts3_tokenizer.rs  fts3_tokenizer1.rs  fts3_unicode.rs  fts3_unicode2.rs  fts3_write.rs
crates/rslite-core/src/ext/misc/: stmt.rs
crates/rslite-core/src/ext/rtree/: rtree.rs
crates/rslite-core/src/ext/session/: sqlite3session.rs
crates/rslite-core/src/headers/: btreeInt_h.rs  mod.rs  sqlite3_h.rs  sqlite3ext_h.rs  sqliteInt_h.rs  stdlib.rs  vdbeInt_h.rs  whereInt_h.rs
crates/rslite-core/src/src/: alter.rs  analyze.rs  attach.rs  auth.rs  backup.rs  bitvec.rs  btmutex.rs  btree.rs  build.rs  callback.rs  carray.rs  complete.rs  date.rs  dbpage.rs  dbstat.rs  delete.rs  expr.rs  fault.rs  fkey.rs  func.rs  global.rs  hash.rs  insert.rs  json.rs  legacy.rs  loadext.rs  main.rs  malloc.rs  mem1.rs  memdb.rs  memjournal.rs  mutex.rs  mutex_unix.rs  os.rs  os_unix.rs  pager.rs  pcache.rs  pcache1.rs  pragma.rs  prepare.rs  (+30 more)
crates/y2lite/y2lite/: Cargo.toml
crust-sqlite-shell/: Cargo.toml  build.rs
crust-sqlite-shell/src/: main.rs  shell.rs
crust-sqlite-shell/target-testfixture/release/: libsqlite_noamalgam.d
crust-sqlite-shell/target-testfixture/release/.fingerprint/c2rust-bitfields-7e085990f922d245/: lib-c2rust_bitfields  lib-c2rust_bitfields.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/c2rust-bitfields-derive-eb8ccdc633c59853/: lib-c2rust_bitfields_derive  lib-c2rust_bitfields_derive.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/cfg-if-74ead1b6ee9e7847/: lib-cfg_if  lib-cfg_if.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/doc-comment-7d3d3280e9bb014e/: lib-doc_comment  lib-doc_comment.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/doc-comment-f4e0339a38364483/: run-build-script-build-script-build  run-build-script-build-script-build.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/doc-comment-f61052fda195a1bc/: build-script-build-script-build  build-script-build-script-build.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/heck-31176216be2b24cf/: lib-heck  lib-heck.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/heck-da2291048ef8e9f1/: lib-heck  lib-heck.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/libc-44f3b7fff35a237d/: build-script-build-script-build  build-script-build-script-build.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/libc-ae09838f778cb234/: lib-libc  lib-libc.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/libc-f45451f998486e08/: run-build-script-build-script-build  run-build-script-build-script-build.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/lock_api-5df445896b637ef5/: lib-lock_api  lib-lock_api.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/parking_lot-49df78adf91caf66/: lib-parking_lot  lib-parking_lot.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/parking_lot_core-0c7f7efd231f08de/: lib-parking_lot_core  lib-parking_lot_core.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/proc-macro2-036e8b6eff9b52a4/: run-build-script-build-script-build  run-build-script-build-script-build.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/proc-macro2-0cd8b4aef2261d02/: build-script-build-script-build  build-script-build-script-build.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/proc-macro2-50ffedebfcda1973/: lib-proc_macro2  lib-proc_macro2.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/quote-7f19f46975d0f6bd/: lib-quote  lib-quote.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/scopeguard-6db82b174221e1c9/: lib-scopeguard  lib-scopeguard.json
crust-sqlite-shell/target-testfixture/release/.fingerprint/smallvec-c4552c4600ae4d31/: lib-smallvec  lib-smallvec.json
crust-tclsqlite/: Cargo.toml  build.rs  compile_commands.json
crust-tclsqlite/src/src/: mod.rs
crust-tclsqlite/src/src/ext/: mod.rs
crust-tclsqlite/src/src/src/: mod.rs  tclsqlite.rs  test3.rs  test6.rs  test_backup.rs  test_bestindex.rs  test_btree.rs  test_config.rs  test_delete.rs  test_demovfs.rs  test_func.rs  test_init.rs  test_intarray.rs  test_onefile.rs  test_quota.rs  test_superlock.rs  test_tclsh.rs  test_thread.rs  test_vdbecov.rs  test_window.rs
(+348 files in other folders)
