[workspace]
resolver = "2"
members = [
    "crates/crust-core",
    "crates/sqlite-printf-macros",
    "crates/y2lite/y2lite-sys",
    "crates/y2lite/y2lite",
    "crates/y2lite/y2lite-orm",
]
default-members = [
    "crates/crust-core",
    "crates/sqlite-printf-macros",
]
exclude = [
    "pub-interface",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
# Internal crates
crust-core = { path = "crates/crust-core" }
sqlite-printf-macros = { path = "crates/sqlite-printf-macros" }
y2lite-sys = { path = "crates/y2lite/y2lite-sys" }
y2lite = { path = "crates/y2lite/y2lite" }
y2lite-orm = { path = "crates/y2lite/y2lite-orm" }

# External dependencies
c2rust-bitfields = "0.22.1"
cc = "1"
libc = "0.2"
parking_lot = "0.12"
snafu = "0.7"
strum_macros = "0.27"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
