[workspace]
resolver = "2"
members = [
    "crates/rslite-core",
    "crates/sqlite-printf-macros",
    "crates/rslite",
]
default-members = [
    "crates/rslite-core",
    "crates/sqlite-printf-macros",
]
exclude = [
    "pub-interface",
    "examples",
    "crates/rslite/examples",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.lints.rust]

# Clippy lints suppressed at workspace level for c2rust-generated code in
# rslite-core. The broad clippy::all/style/suspicious/complexity/perf/nursery
# group allows are forbidden by spec constraint forbid_clippy_lint_groups_any,
# so the specific lints they were silencing must be enumerated here. These
# lints fire pervasively in machine-translated SQLite code where attempting
# to "fix" them would risk altering semantics.
[workspace.lints.clippy]
unnecessary_cast = "allow"
missing_safety_doc = "allow"
nonminimal_bool = "allow"
absurd_extreme_comparisons = "allow"
eq_op = "allow"
approx_constant = "allow"
almost_swapped = "allow"

[package]
name = "sqlite-noamalgam"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
test = ["rslite-core/test"]
fts3 = ["rslite-core/fts3"]
fts4 = ["rslite-core/fts4"]
update_delete_limit = ["rslite-core/update_delete_limit"]

[dependencies]
rslite-core = { workspace = true }

[profile.release]
lto = false
codegen-units = 16
opt-level = 3

[profile.dev]
codegen-units = 1

[workspace.dependencies]
# Internal crates
rslite-core = { path = "crates/rslite-core" }
sqlite-printf-macros = { path = "crates/sqlite-printf-macros" }
rslite = { path = "crates/rslite" }

# External dependencies
c2rust-bitfields = "0.22.1"
cc = "1"
libc = "0.2"
parking_lot = "0.12"
snafu = "0.7"
strum_macros = "0.27"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
