[workspace]
resolver = "2"
members = [
    "crust-sqlite-shell",
    "crust-tclsqlite",
    "crust-speedtest1",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
# Internal crates
rslite-core = { path = "../crates/rslite-core" }
sqlite-printf-macros = { path = "../crates/sqlite-printf-macros" }

# External dependencies
c2rust-bitfields = "0.22.1"
cc = "1"
lazy_static = "1.4"
libc = "0.2"
parking_lot = "0.12"
pkg-config = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
snafu = "0.7"
strum_macros = "0.27"
syn = { version = "2.0", features = ["full"] }
