[package]
name = "crust-sqlite-shell"
version.workspace = true
edition.workspace = true
authors = ["C2Rust Automated Migration"]
build = "build.rs"

[[bin]]
name = "sqlite3"
path = "src/main.rs"

[dependencies]
# shell.c compiled with -DSQLITE_ENABLE_FTS4 — require fts4 (which implies fts3)
crust-core = { workspace = true, features = ["fts4"] }
sqlite-printf-macros = { workspace = true }
libc = { workspace = true }
lazy_static = "1.4"
parking_lot = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
